--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "modules/types.ts"
+    "modules/types.ts",
+    "modules/auth/types.ts"
   ],
   "exclude": ["node_modules"]
 }
