--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,5 @@
     "modules/types.ts",
     "modules/auth/types.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "starters-main"]
 }
